--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,21 @@
     <meta charset="utf-8">
     <title>Guess The Number</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Baloo" rel="stylesheet">
   </head>
 
   <body>
     <h1>Guess The Number Game</h1>
+    
 
     <p>Here's a simple game you can play to try and guess the number I'm thinking of.<p>
 
     <p>
       Ready to play?
-      <a href="/new">Start the Game</a>
+    </p>
+    
+      <br/> 
+      <a class = "bath" href="/new">Start the Game</a>
     </p>
   </body>
 </html>
